--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~9.1.6",
     "@angular/router": "~9.1.6",
     "@webcomponents/custom-elements": "^1.4.1",
+    "bootstrap": "^4.5.0",
     "lit-element": "^2.3.1",
     "lit-html": "^1.2.1",
     "rxjs": "~6.5.4",
